--- a/css/addtask.css
+++ b/css/addtask.css
@@ -138,7 +138,6 @@ main {
     align-items: flex-start;
     text-align: start;
     font-size: 20px;
-    padding-top: 5px;
     cursor: pointer;
     word-wrap: break-word;
     resize: none;
@@ -416,15 +415,23 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 31px;
+    top: 32px;
     width: 440px;
     z-index: 1;
+    
 }
 
 .dropDownOption {
-    padding: 12px 16px;
+    padding: 0px 16px;
     width: 100%;
-    border-radius: 10px;
+    border-radius: 10px; 
+    opacity: 0;
+}
+
+label {
+    cursor: pointer;
+    padding: 0px 16px 12px 16px;
+    
 }
 
 .dropDownOption:hover {
