--- a/css/startpage.css
+++ b/css/startpage.css
@@ -174,15 +174,14 @@ input[type=checkbox]:checked{
     background-size: 24px 24px;
 }
 
-.inputPassword {
-    background-image: url(/img/login/lock.svg);
-    background-repeat: no-repeat;
-    background-position: 95%;
-    background-size: 24px 24px;
+.inputContainer {
+    display: flex;
+    align-items: center;
 }
 
-.inputPassword:focus {
-    background-image: url(/img/login/visibility_off.svg);
+.inputSmallIcon {
+    margin-left: -36px;
+    cursor: pointer;
 }
 
 .messagebox {
