--- a/css/board.css
+++ b/css/board.css
@@ -1,4 +1,4 @@
-h1{
+.h1Board{
     font-size: 61px;
     font-weight: 700;
 }
@@ -414,7 +414,7 @@ h1{
     margin-top: 40px;
     width: 396px;
 }
-h1 {
+.h1Board {
     font-size: 47px !important;
 }
 }
