--- a/css/login.css
+++ b/css/login.css
@@ -125,19 +125,16 @@
     cursor: pointer; 
 }
 
+input:focus {
+    outline: 1px solid #29ABE2;
+}
+
  .inputEmpty{
     outline: 1px solid red;
  }
  
 ::placeholder {
     color: #D1D1D1;
-}
-
-.inputMail {
-    background-image: url(/img/login/mail.svg);
-    background-repeat: no-repeat;
-    background-position: 95%;
-    background-size: 24px 24px;
 }
 
 .inputContainer {
