--- a/css/signup.css
+++ b/css/signup.css
@@ -110,26 +110,16 @@
     cursor: pointer;
 }
 
+input:focus {
+    outline: 1px solid #29ABE2;
+}
+
 .inputEmpty {
     outline: 1px solid red;
 }
 
 ::placeholder {
     color: #D1D1D1;
-}
-
-.inputName {
-    background-image: url(/img/register/person.svg);
-    background-repeat: no-repeat;
-    background-position: 95%;
-    background-size: 24px 24px;
-}
-
-.inputMail {
-    background-image: url(/img/login/mail.svg);
-    background-repeat: no-repeat;
-    background-position: 95%;
-    background-size: 24px 24px;
 }
 
 .inputContainer {
