--- a/css/board.css
+++ b/css/board.css
@@ -312,7 +312,7 @@
     display: none;
   }
 
-.cardDetailHeader{
+#cardDetailHeader{
     display: flex;
     justify-content: space-between;
     align-items: center;
