--- a/css/summary.css
+++ b/css/summary.css
@@ -155,6 +155,31 @@
     color: var(--secondarycolor);
 }
 
+.greetingContainer {
+    height: 100vh;
+    width: 100vw;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.greetingNameSmallScreen{
+    font-size: 54px;
+    font-weight: 700;
+    line-height: 56.4px;
+    color: var(--secondarycolor);
+}
+
+.greetingMessageSmallScreen {
+    font-size: 36px;
+    font-weight: 400;
+    color: var(--maincolor);
+    line-height: 43.2px;
+}
+
 @media (max-width: 1170px) {
     .summaryPageContent {
         gap: 24px;
