--- a/css/addtask.css
+++ b/css/addtask.css
@@ -223,6 +223,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     background-repeat: no-repeat;
     background-position: 95%;
     background-size: 24px 24px;
+    position: absolute;
+    top: 10px;
+    right: 13px;
 }
 
 .inputSubtaskContainer {
