--- a/css/addtask.css
+++ b/css/addtask.css
@@ -458,7 +458,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding: 0px 16px;
     width: 100%;
     border-radius: 10px; 
-    opacity: 0;
+    height: 48px;
 }
 
 label {
