--- a/css/addtask.css
+++ b/css/addtask.css
@@ -73,6 +73,10 @@ main {
 .searchContactField {
     border: 1px solid var(--secondarycolor);
     display: flex;
+    padding: 0px 16px;
+    width: 100%;
+    border-radius: 10px; 
+    height: 48px;
 }
 
 
@@ -458,8 +462,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding: 0px 16px;
     width: 100%;
     border-radius: 10px; 
-    height: 48px;
+    opacity: 0;
 }
+
+
 
 label {
     cursor: pointer;
@@ -563,7 +569,6 @@ label {
     width: 309px;
     height: 56px;
     gap: 16px;
-
 }
 
 @media (max-width: 1400px) {
