--- a/css/addtask.css
+++ b/css/addtask.css
@@ -455,7 +455,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     top: 32px;
     width: 440px;
     z-index: 1;
-    
 }
 
 .dropDownOption {
@@ -465,12 +464,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     opacity: 0;
 }
 
-
-
 label {
     cursor: pointer;
     padding: 0px 16px 12px 16px;
-    
+    width: 100%;
 }
 
 .dropDownOption:hover {
