--- a/css/information.css
+++ b/css/information.css
@@ -1,3 +1,6 @@
+a{
+    color: var(--secondarycolor);
+}
 .informationHeader{
     display: flex;
     justify-content: space-between;
@@ -22,6 +25,7 @@ h3{
    font-weight: 700;
    line-height: 32.4px; 
    padding-bottom: 8px;
+   padding-top: 16px;
 }
 h4{
     font-weight: 700;
@@ -29,4 +33,11 @@ h4{
     line-height: 19.2px;
     padding-top: 16px;
     padding-bottom: 8px;
+}
+li{
+    margin-left: 24px;
+    line-height: 24px;
+}
+p{
+    line-height: 24px;
 }
