render card is new

--- a/css/board.css
+++ b/css/board.css
@@ -266,7 +266,7 @@
 
 /*CardDetail*/
 #cardContainerBackground{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
@@ -279,8 +279,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: none;
     justify-content: center;
     align-items: center;
@@ -299,7 +299,7 @@
     row-gap: 24px;
     z-index: 11;
     -ms-overflow-style: none;
-    position: absolute;
+    position: fixed;
     animation: slideInFromRight 0.25s ease;
 }
 
@@ -428,7 +428,6 @@
 .boardTasks{
     flex-direction: row;
     overflow-x: auto;
-    white-space: nowrap;
     -ms-overflow-style: none; /*No Scrollbar*/
     width: 85vw;
     gap: 24px;
@@ -439,7 +438,9 @@
   }
 
 #cardDetail{
-        width: 396px;
+    min-width: 0;
+    margin-left: -16px;
+
     }
 .taskInfoDetail{
     font-size: 16px;
