--- a/css/board.css
+++ b/css/board.css
@@ -290,6 +290,7 @@
     background-color: white;
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.16);
     border-radius: 30px;
+    max-width: 525px;
     min-width: 525px;
     max-height: 90vh;
     overflow-y: auto;
@@ -439,7 +440,7 @@
 
 #cardDetail{
     min-width: 0;
-    margin-left: -16px;
+    max-width: none;
 
     }
 .taskInfoDetail{
