Fixed Contacts page

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -124,12 +124,13 @@ main {
 .contactCard {
     position: relative;
     top: 0;
-    left: 300%;
+    left: 100%;
     transition: left 0.1s ease;
+    visibility: hidden;
 }
 
 .contactCardActive {
-    display: block;
+    visibility: visible;
     left: 0;
 }
 
