--- a/css/addtask.css
+++ b/css/addtask.css
@@ -257,6 +257,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     list-style-position: inside;
     max-height: 100px;
     overflow-y: auto;
+    position: relative;
 }
 
 .subtaskList li {
