--- a/css/board.css
+++ b/css/board.css
@@ -284,6 +284,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    max-width: 1440px;
     display: none;
     justify-content: center;
     align-items: center;
@@ -402,6 +403,7 @@
 .taskFunctionsIcons {
     width: 18px;
 }
+
 
 
 @media (max-width: 940px) {
