--- a/css/addtask.css
+++ b/css/addtask.css
@@ -162,7 +162,6 @@ main {
     margin-top: 5px;
     margin-bottom: 17px;
     display: block;
-    z-index: 100;
     width: 100%;
     height: 10px;
     padding-left: 5px;
@@ -457,7 +456,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     position: absolute;
     top: 32px;
     width: 440px;
-    z-index: 1;
+    z-index: 2;
+    background-color: white;
 }
 
 .dropDownOption {
