--- a/css/board.css
+++ b/css/board.css
@@ -55,6 +55,7 @@
     display: flex;
     height: 48px;
     gap: 32px;
+    margin-right: 10px;
 }
 .mobileTaskActivities{
     display: none;
@@ -136,6 +137,7 @@
     display: flex;
     gap: 24px;
     flex-wrap: wrap;
+    margin-right: 10px;
 
 }
 .board2{
